[build-system]
requires = ["setuptools>=68", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/yamlsub/__init__.py" = ["{version}"]
