[build-system]
requires = ["setuptools>=68", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "2024.02.24"
version_pattern = "YYYY.MM.INC0"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
    'current_version = "{version}"',
]
