[metadata]
name = yamlsub
version = 1.0.0
author = James G Willmore
description = A sample project that uses a YAML config file
long_description = A sample project that uses a YAML config file and allows for the use of environment variables

[options]
python_requires = >=3.7, <4
install_requires = 
    pyyaml
    pyaml-env
    python-dotenv
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src
