[metadata]
name = yamlsub
author = James G Willmore
author_email = willmorejg@gmail.com
description = A sample project that uses a YAML config file
long_description = A sample project that uses a YAML config file and allows for the use of environment variables
keywords = yaml, config, environment
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
python_requires = >=3.7, <4
install_requires = 
    pyyaml
    pyaml-env
    python-dotenv
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src
