[metadata]
name = yamlsub
version = 1.3.3
author = James G Willmore
author_email = willmorejg@gmail.com
url = https://github.com/willmorejg/yamlsub
description = A sample project that uses a YAML config file
long_description = file: README.md
long_description_content_type = text/markdown
keywords = yaml, config, environment
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
python_requires = >=3.7, <4
install_requires = 
    pyyaml
    pyaml-env
    python-dotenv
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev = 
    build
    black
    bumpver
